--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "react-native-screens": "~3.15.0",
     "react-native-svg": "12.3.0",
     "react-native-web": "~0.18.7",
-    "swiper": "^8.4.4"
+    "swiper": "^8.4.4",
+    "@expo/vector-icons": "^13.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
