--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "react-native-svg": "12.3.0",
     "react-native-web": "~0.18.7",
     "swiper": "^8.4.4",
-    "@expo/vector-icons": "^13.0.0"
+    "@expo/vector-icons": "^13.0.0",
+    "expo-barcode-scanner": "~11.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
