--- a/app.json
+++ b/app.json
@@ -2,6 +2,7 @@
   "expo": {
     "name": "washy-mb",
     "slug": "washy-mb",
+    "owner": "artist0123",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
