--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/vector-icons": "^13.0.0",
     "@expo/webpack-config": "^0.17.0",
     "@react-navigation/bottom-tabs": "^6.4.0",
     "@react-navigation/drawer": "^6.5.0",
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/native-stack": "^6.9.1",
     "expo": "~46.0.16",
+    "expo-barcode-scanner": "~11.4.0",
     "expo-status-bar": "~1.4.0",
     "native-base": "^3.4.19",
     "nativewind": "^2.0.11",
@@ -23,13 +25,12 @@
     "react-native": "0.69.6",
     "react-native-gesture-handler": "~2.5.0",
     "react-native-reanimated": "~2.9.1",
+    "react-native-reanimated-carousel": "^3.1.5",
     "react-native-safe-area-context": "4.3.1",
     "react-native-screens": "~3.15.0",
     "react-native-svg": "12.3.0",
     "react-native-web": "~0.18.7",
-    "swiper": "^8.4.4",
-    "@expo/vector-icons": "^13.0.0",
-    "expo-barcode-scanner": "~11.4.0"
+    "swiper": "^8.4.4"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
