--- a/package.json
+++ b/package.json
@@ -17,20 +17,24 @@
     "@react-navigation/native-stack": "^6.9.1",
     "expo": "~46.0.16",
     "expo-barcode-scanner": "~11.4.0",
+    "expo-camera": "~12.3.0",
+    "expo-location": "~14.3.0",
     "expo-status-bar": "~1.4.0",
+    "keen-slider": "^6.8.3",
     "native-base": "^3.4.19",
     "nativewind": "^2.0.11",
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-native": "0.69.6",
     "react-native-gesture-handler": "~2.5.0",
+    "react-native-maps": "0.31.1",
     "react-native-reanimated": "~2.9.1",
     "react-native-reanimated-carousel": "^3.1.5",
     "react-native-safe-area-context": "4.3.1",
     "react-native-screens": "~3.15.0",
     "react-native-svg": "12.3.0",
     "react-native-web": "~0.18.7",
-    "expo-camera": "~12.3.0"
+    "yarn": "^1.22.19"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
