--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/drawer": "^6.5.0",
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/native-stack": "^6.9.1",
+    "@reduxjs/toolkit": "^1.9.0",
     "expo": "~46.0.16",
     "expo-barcode-scanner": "~11.4.0",
     "expo-camera": "~12.3.0",
@@ -36,6 +37,7 @@
     "react-native-screens": "~3.15.0",
     "react-native-svg": "12.3.0",
     "react-native-web": "~0.18.7",
+    "react-redux": "^8.0.5",
     "yarn": "^1.22.19"
   },
   "devDependencies": {
