--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-dom": "18.0.0",
     "react-native": "0.69.6",
     "react-native-gesture-handler": "~2.5.0",
+    "react-native-get-random-values": "~1.8.0",
     "react-native-maps": "0.31.1",
     "react-native-reanimated": "~2.9.1",
     "react-native-reanimated-carousel": "^3.1.5",
@@ -38,6 +39,7 @@
     "react-native-svg": "12.3.0",
     "react-native-web": "~0.18.7",
     "react-redux": "^8.0.5",
+    "uuid": "^9.0.0",
     "yarn": "^1.22.19"
   },
   "devDependencies": {
