--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-native-gesture-handler": "~2.5.0",
     "react-native-get-random-values": "~1.8.0",
     "react-native-maps": "0.31.1",
+    "react-native-qrcode-svg": "^6.1.2",
     "react-native-reanimated": "~2.9.1",
     "react-native-reanimated-carousel": "^3.1.5",
     "react-native-safe-area-context": "4.3.1",
