--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "expo": "~46.0.16",
     "expo-barcode-scanner": "~11.4.0",
     "expo-camera": "~12.3.0",
+    "expo-linear-gradient": "~11.4.0",
     "expo-location": "~14.3.0",
     "expo-status-bar": "~1.4.0",
     "firebase": "^9.14.0",
@@ -32,6 +33,7 @@
     "react-native": "0.69.6",
     "react-native-gesture-handler": "~2.5.0",
     "react-native-get-random-values": "~1.8.0",
+    "react-native-linear-gradient": "^2.6.2",
     "react-native-maps": "0.31.1",
     "react-native-qrcode-svg": "^6.1.2",
     "react-native-reanimated": "~2.9.1",
