--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "expo": "~46.0.16",
     "expo-barcode-scanner": "~11.4.0",
     "expo-camera": "~12.3.0",
+    "expo-dev-client": "~1.3.1",
     "expo-linear-gradient": "~11.4.0",
     "expo-location": "~14.3.0",
     "expo-status-bar": "~1.4.0",
