--- a/package.json
+++ b/package.json
@@ -28,7 +28,6 @@
     "geolib": "^3.3.3",
     "keen-slider": "^6.8.3",
     "native-base": "^3.4.19",
-    "nativewind": "^2.0.11",
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-native": "0.69.6",
@@ -48,8 +47,7 @@
     "yarn": "^1.22.19"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9",
-    "tailwindcss": "^3.2.1"
+    "@babel/core": "^7.12.9"
   },
   "private": true
 }
